# rust-socketio

./: Cargo.toml  README.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/rust_socketio/: all.html  index.html  sidebar-items.js  struct.Socket.html  struct.SocketIO.html
doc/rust_socketio/socket/: struct.Socket.html
doc/rust_socketio/socketio/: struct.SocketIO.html
doc/src/rust_socketio/: lib.rs.html  socket.rs.html  socketio.rs.html
src/: lib.rs  socket.rs  socketio.rs
